# diesel-rocket-demo

./: .drone.yml  Cargo.toml  app.json
src/: db.rs  main.rs
