[package]
name = "diesel-rocket-demo"
version = "0.1.0"
authors = ["Pete Wildsmith <pete@dabapps.com>"]

[dependencies]
diesel = { version = "0.13.0", features = ["postgres"] }
diesel_codegen = { version = "0.13.0", features = ["postgres"] }
dotenv = "0.9.0"

rocket = "0.2.8"
rocket_codegen = "0.2.8"
rocket_contrib = "0.2.8"

lazy_static = "0.2.2"

validator = "0.4.0"
validator_derive = "0.5.0"

serde = "0.9.15"
serde_derive = "0.9.15"
serde_json = "0.9.10"

r2d2 = "0.7.2"
r2d2-diesel = "0.13.0"
